test/sematest/valid/comparisons3.java
class A {
  public int a;
  public static void main(String[] args) {
    boolean a = new A().a == 4;
    boolean b = new A() == null;
  }
}