test/sematest/invalid/unknown_class.java
class main {
  public main2 main;
  public static void main(String[] args) {
    int main = 4;
    new main().main(new main());
    new main().main = new main().main(new main().main).main;
  }
  public main main(main main){
    return main(main(main));
  }
}